--- a/index.html
+++ b/index.html
@@ -3,25 +3,101 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Basic HTML Page</title>
+  <title>My Personal Webpage</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
+      padding: 0;
+      margin: 0;
       background-color: #f4f4f4;
-    }
-    h1 {
       color: #333;
     }
-    p {
-      font-size: 16px;
+
+    header {
+      background-color: #333;
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    section {
+      padding: 40px 20px;
+      max-width: 800px;
+      margin: auto;
+      background-color: white;
+      margin-top: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+
+    h2 {
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 10px;
+    }
+
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 15px 0;
+      margin-top: 40px;
+    }
+
+    ul {
+      list-style: square;
+      padding-left: 20px;
+    }
+
+    a {
+      color: #007BFF;
     }
   </style>
 </head>
 <body>
 
-  <h1>Welcome to My Page</h1>
-  <p>This is a basic HTML file structure.</p>
+  <header>
+    <h1>Welcome to My Personal Webpage</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Hello! I’m a passionate web developer who loves creating simple and clean web interfaces. This is a basic HTML page to showcase how you can structure and style a simple webpage using pure HTML and CSS.</p>
+    <p>I enjoy learning new technologies, building projects, and sharing knowledge with others.</p>
+  </section>
+
+  <section id="services">
+    <h2>What I Do</h2>
+    <ul>
+      <li>Design and build responsive websites</li>
+      <li>Create HTML/CSS templates</li>
+      <li>Deploy web pages using CI/CD pipelines</li>
+      <li>Dockerize and host web apps</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>If you’d like to get in touch, feel free to drop me an email at <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+    <p>You can also follow me on:
+      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+    </p>
+  </section>
+
+  <footer>
+    <p>© 2025 My Personal Webpage. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
